<resources>
    <string name="app_name">MechanicSchedulerApplication</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_time">Time</string>
    <string name="menu_statements">Statements</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="clock_in">Clock In</string>
    <string name="default_clock_in_time">0:00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>